--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: substack-notes-exporter
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 300
     plan: free
